# dava-smart-librarian

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: api.py  pyproject.toml  retriever.py
backend/scripts/: generate_books.py  ingest_chroma.py
backend/tmp/: parsed_batch_1.json  parsed_batch_10.json  parsed_batch_2.json  parsed_batch_3.json  parsed_batch_4.json  parsed_batch_5.json  parsed_batch_6.json  parsed_batch_7.json  parsed_batch_8.json  parsed_batch_9.json  raw_batch_1.txt  raw_batch_10.txt  raw_batch_2.txt  raw_batch_3.txt  raw_batch_4.txt  raw_batch_5.txt  raw_batch_6.txt  raw_batch_7.txt  raw_batch_8.txt  raw_batch_9.txt
data/: book_summaries.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AnswerPanel.jsx  ChatBar.jsx  FeatureCard.jsx  FeaturePresentationRow.jsx  Header.jsx
